--- a/src/Core/MCL.Application/MCL.Application.csproj
+++ b/src/Core/MCL.Application/MCL.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MCL.Domain\MCL.Domain.csproj" />
   </ItemGroup>
 
